--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "postcss-nesting": "^13.0.1",
         "tailwindcss": "^3.4.17",
         "vite": "^6.0"
+    },
+    "dependencies": {
+        "flowbite": "^2.5.2"
     }
 }
