--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "devaslanphp/auto-translate": "^1.0",
         "filament/filament": "^3.2",
         "filament/spatie-laravel-settings-plugin": "^3.2",
+        "flowframe/laravel-trend": "^0.3.0",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "spatie/eloquent-sortable": "^4.4"
